# pycequeau

./: .gitignore  .readthedocs.yml  README.md  README.rst  docs.yml  environment.yml  get_meteo.py  get_parameters.py  get_physio.py  grid_points.csv  plot_shp.py  puntos.csv  puntos2.csv  pyproject.toml  requirements.txt  test.py  test.tif  tutorial_CORDEX.ipynb
.github/workflows/: build_windows.yml  environment.yml  publish-pypi.yml  python-package-conda.yml  python-package.yml  release.yml
_legacy_matlab/: doMeteoInterpolation.m  drawCequeauRouting.m
docs/: Makefile  api.rst  condition_dem.rst  conf.py  contribute.rst  cop_dem.rst  flowlibs.rst  grass.rst  index.rst  make.bat  meteo.nblink  modules.rst  physio.nblink  pycequeau.core.netcdf.rst  pycequeau.core.rst  pycequeau.core.units.rst  pycequeau.meteo.base.rst  pycequeau.meteo.meteo_netcdf.rst  pycequeau.meteo.meteo_surface_gauges.rst  pycequeau.meteo.rst  pycequeau.physiographic.carreauxEntiers.rst  pycequeau.physiographic.carreauxPartiels.rst  pycequeau.physiographic.rst  pycequeau.rst  pycequeau.simulations.rst  src.core.rst  src.meteo.rst  src.physiographic.rst  src.rst  src.simulations.rst
docs/_static/: custom.css
docs/api/: modules.rst  pycequeau.core.cop_processor.rst  pycequeau.core.manage_files.rst  pycequeau.core.matlab_utils.rst  pycequeau.core.netcdf.rst  pycequeau.core.projections.rst  pycequeau.core.rst  pycequeau.core.unit_handler.rst  pycequeau.core.utils.rst  pycequeau.meteo.base.rst  (+22 more)
matlab/: README.md  main.m
pycequeau/: __init__.py
scripts/: create_release.py
src/: __init__.py
(+85 files in other folders)
